# src/routes/paymentRoutes.js
@@ -1,8 +1,9 @@
 const express = require('express');
 const router = express.Router();
-const { confirmPayment } = require('../controllers/paymentController');
+const { generateClientToken, confirmPayment } = require('../controllers/paymentController');
 const { authenticateToken } = require('../middlewares/authMiddleware');
 
+router.get("/client_token", authenticateToken, generateClientToken);
 router.post('/confirm', authenticateToken, confirmPayment);
 
 module.exports = router;
